TAG:  qcreports_db-3-4-0-14
DATE: 01/06/2006
STAFF: lec
CHANGES:
1) TR 7369; GXD_FullCodeMissingIndex.sql
2) TR 7370; GXD_FullCodeGene.sql

TAG:  qcreports_db-3-4-0-13
DATE: 01/06/2006
STAFF: dow
CHANGES:
1) added link for IMSR QC Load reports

TAG:  qcreports_db-3-4-0-12
DATE: 01/04/2006
STAFF: lec
CHANGES:
1) added RADAR_DBNAME to Configuration.default

TAG:  qcreports_db-tr7335-BP
DATE: 12/27/2005
STAFF: mbw
CHANGES:
1) branch point tag for TR 7335

TAG:  qcreports_db-3-4-0-11
TAG:  qcreports_db-3-4-0-10
TAG:  qcreports_db-3-4-0-9
DATE: 12/21/2005
STAFF: lec
CHANGES:
1) GXD_ProbeAntibody.sql/TR 7347
2) PRB_StrainJAX1.py, PRB_StrainJAX2.py/TR 7342
3) GXD_GelBand.sql/TR 7344

TAG:  qcreports_db-3-4-0-8
DATE: 12/05/2005
STAFF: lec
CHANGES:
1) GXD_ProbeAntibody.sql
2) ALL_AssocPheno.py

TAG:  qcreports_db-3-4-0-7
DATE: 11/22/2005
STAFF: lec
CHANGES:
1) various enhancements/fixes to reports:
	MRK_TranscriptNoSP.sql

TAG:  qcreports_db-3-4-0-6
DATE: 11/21/2005
STAFF: lec
CHANGES:
1) various enhancements/fixes to probe reports:
	PRB_NoMarkerSeq.sql
	PRB_Marker.sql
	MGI_ProblemSequence.py
	PRB_MarkerSeq.sql (removed)

TAG:  qcreports_db-3-4-0-5
DATE: 11/17/2005
STAFF: lec
CHANGES:
1) TR 7247/Strain reports

TAG:  qcreports_db-3-4-0-4
DATE: 11/01/2005
STAFF: mbw
CHANGES:
1) added PIRSF load link

TAG:  qcreports_db-3-4-0-3
DATE: 10/31/2005
STAFF: lec
CHANGES: 
1) mgd/GXD_GenotypeRef.sql

TAG:  qcreports_db-3-4-0-2
DATE: 10/26/2005
STAFF: lec
CHANGES: 
1) TR 7190; mgd/MRK_GOIEA.py; change to F report

TAG:  qcreports_db-tr7062-BP
DATE: 10/14/2005
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5 (TR 7062)

TAG:  qcreports_db-3-4-0-1
TAG:  qcreports_db-3-4-0-0
DATE: 10/13/2005
STAFF: sc
RELEASE: 3.4 alpha
CHANGES: merge of pirsfload branch to trunk - note: there were no changes
         on the branch

TAG:  qcreports_db-3-3-0-5
DATE: 10/062005
STAFF: lec
CHANGES:
1) TR 7160; GXD_FullCode.py, GXD_Images.py

TAG:  qcreports_db-3-3-0-4
DATE: 09/28/2005
STAFF: lec
CHANGES: